--- a/main.html
+++ b/main.html
@@ -9,46 +9,46 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<button data-ns-test="data-ns-test">test1</button>
-		<button data-ns-test="data-ns-test">test2</button>		
+		<button data-ns-test="data-ns-button">Test1</button>
+		<button data-ns-test="data-ns-button">Test2</button>
 	</div>
 	<div>
-		<div data-ns-test="block-inline-div">test1</div>
-		<div data-ns-test="block-inline-div">test2</div>
+		<div data-ns-test="block-inline-div">Test1</div>
+		<div data-ns-test="block-inline-div">Test2</div>
 	</div>
 	<div>
-		<span data-ns-test="block-inline-span">test1</span>
-		<span data-ns-test="block-inline-span">test2</span>		
+		<span data-ns-test="block-inline-span">Test1</span>
+		<span data-ns-test="block-inline-span">Test2</span>		
 	</div>
 	<div>
-		<p data-ns-test="block-inline-p">test1</p>
-		<p data-ns-test="block-inline-p">test2</p>
+		<p data-ns-test="block-inline-p">Test1</p>
+		<p data-ns-test="block-inline-p">Test2</p>
 	</div>
 	<div>
-		<input data-ns-test="block-inline-input" placeholder="test1">
-		<input data-ns-test="block-inline-input" placeholder="test2">
+		<input data-ns-test="block-inline-input" placeholder="Test1">
+		<input data-ns-test="block-inline-input" placeholder="Test2">
 	</div>
 	<div>
-		<cite data-ns-test="block-inline-cite">test1</cite>
-		<cite data-ns-test="block-inline-cite">test2</cite>
+		<cite data-ns-test="block-inline-cite">Test1</cite>
+		<cite data-ns-test="block-inline-cite">Test2</cite>
 		
 	</div>
 	<div>
-		<code data-ns-test="block-inline-code">test1</code>
-		<code data-ns-test="block-inline-code">test2</code>		
+		<code data-ns-test="block-inline-code">Test1</code>
+		<code data-ns-test="block-inline-code">Test2</code>		
 	</div>
 	<div>
-		<h1 data-ns-test="block-inline-h1">test1</h1>
-		<h1 data-ns-test="block-inline-h1">test2</h1>
+		<h1 data-ns-test="block-inline-h1">Test1</h1>
+		<h1 data-ns-test="block-inline-h1">Test2</h1>
 		
 	</div>
 	<div>
-		<sup data-ns-test="block-inline-sup">test1</sup>
-		<sup data-ns-test="block-inline-sup">test2</sup>
+		<sup data-ns-test="block-inline-sup">Test1</sup>
+		<sup data-ns-test="block-inline-sup">Test2</sup>
 	</div>
 	<div>
-		<sub data-ns-test="block-inline-sub">text1</sub>
-		<sub data-ns-test="block-inline-sub">text2</sub>		
+		<sub data-ns-test="block-inline-sub">Text1</sub>
+		<sub data-ns-test="block-inline-sub">Text2</sub>		
 	</div>
 	
     <script type="text/javascript" src="./script.js">
